--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon src/app.ts",
-    "test": "jest --coverage"
+    "start": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
